--- a/index.html
+++ b/index.html
@@ -61,8 +61,16 @@
             <p class="feature__text">Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.</p>
            </div>
        </section>
-       <div class="story__pictures">Story pictures</div>
-       <div class="story__content">Story Content</div>
+       <div class="story__pictures">
+          <img class="story__img--1" src="img/story-1.jpeg" alt="Couple with new house">
+          <img class="story__img--2" src="img/story-2.jpeg" alt="Couple with new house">
+       </div>
+       <div class="story__content">
+          <h3 class="heading-3 mb-sm">Happy Customers</h3>
+          <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
+          <p class="story__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus. Quidem consequatur harum volupta!</p>
+          <button class="btn">Find your own home</button>
+       </div>
        <section class="homes">Homes</section>
        <section class="gallery">Gallery</section>
        <footer class="footer">Footer</footer>
