--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body class="container">
        <div class="sidebar">
-           sidebar
+           <button class="nav-btn"></button>
        </div>
        <header class="header">Header</header>
        <div class="realtors">Top 3 Realtors</div>
